# RayTracing

./: CMakeLists.txt  main.cpp  main.qml
shader/: fractalShadeer.frag  fractalVertex.vert  kaleidoscope.frag  totalRayTracing.frag
